--- a/Amoenus.NiceActionRepeater/Package.nuspec
+++ b/Amoenus.NiceActionRepeater/Package.nuspec
@@ -18,7 +18,7 @@
     </summary>
     <language>en-US</language>
     <projectUrl>https://github.com/Amoenus.NiceActionRepeater</projectUrl>
-    <iconUrl>https://github.com/Amoenus/Amoenus.NiceActionRepeater/blob/master/cc0-logo.png?raw=true</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/Amoenus/Amoenus.NiceActionRepeater/master/CC0-Logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>http://unlicense.org/UNLICENSE</licenseUrl>
     <copyright></copyright>
